Signed-off-by: aNing1210 <aning1210@foxmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,4 +63,4 @@ importFrom(utils,write.table)
 importFrom(vars,VAR)
 importFrom(vars,causality)
 importFrom(viridis,scale_color_viridis)
-useDynLib(Test1, .registration = TRUE)
+useDynLib(Test1)
