--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,9 @@ LazyData: true
 Encoding: UTF-8
 Depends: R (>= 3.5.0)
 RoxygenNote: 6.1.1
+LinkingTo: Rcpp, RcppArmadillo, BH, RANNinf
 Imports:MASS,reshape2,infotheo, NMF, dynamicTreeCut, methods,DT,Rtsne,feather,AUCell,foreach,RcisTarget,
-        SummarizedExperiment,Biobase,base,BiocParallel,data.table
+        SummarizedExperiment,Biobase,base,BiocParallel,data.table, RcppArmadillo,Rcpp
 Enhances: doMC
 Suggests: knitr, rmarkdown, doRNG, doParallel, testthat, SCopeLoomR,HiveR
 
