--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Depends: R (>= 3.5.0)
 RoxygenNote: 6.1.1
 LinkingTo: Rcpp, RcppArmadillo, BH, RANNinf
 Imports:MASS,reshape2,infotheo, NMF, dynamicTreeCut, methods,DT,Rtsne,feather,AUCell,foreach,RcisTarget,
-        SummarizedExperiment,Biobase,base,BiocParallel,data.table, RcppArmadillo,Rcpp
+        SummarizedExperiment,Biobase,base,BiocParallel,data.table,HiveR,lmtest,HiveR,RANN,arcdiagram,
+          cowplot,fpc,ggplot2,inflection, lmtest, netbiov, pheatmap, plotly, plyr,rEDM, stringr, vars, viridis
 Enhances: doMC
-Suggests: knitr, rmarkdown, doRNG, doParallel, testthat, SCopeLoomR,HiveR
+Suggests: knitr, rmarkdown, doRNG, doParallel, testthat, SCopeLoomR
 
