Signed-off-by: aNing1210 <aning1210@foxmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(MAC_perm)
 export(SCODE)
 export(ScenicOptions)
 export(aracne)
+export(aracnee)
 export(build.mim)
 export(buildPseudoTimeSeries)
 export(cal_cross_map)
@@ -25,6 +26,7 @@ export(calculate_rdi_multiple_run_cpp_wrap)
 export(calculate_temporal_causality)
 export(calculate_umi)
 export(clr)
+export(clrr)
 export(cmi)
 export(create_super_graph)
 export(dbLoadingAttempt)
@@ -124,6 +126,7 @@ importFrom(RcisTarget,addMotifAnnotation)
 importFrom(RcisTarget,addSignificantGenes)
 importFrom(RcisTarget,getNumColsInDB)
 importFrom(RcisTarget,importRankings)
+importFrom(Rcpp,sourceCpp)
 importFrom(arcdiagram,arcplot)
 importFrom(cowplot,plot_grid)
 importFrom(data.table,is.data.table)
@@ -172,4 +175,4 @@ importFrom(utils,write.table)
 importFrom(vars,VAR)
 importFrom(vars,causality)
 importFrom(viridis,scale_color_viridis)
-useDynLib(Test1)
+useDynLib(Test1, .registration = TRUE)
