--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,8 @@ Encoding: UTF-8
 Depends: R (>= 3.5.0)
 RoxygenNote: 6.1.1
 LinkingTo: Rcpp, RcppArmadillo, BH, RANNinf
-Imports:MASS,reshape2,infotheo, NMF, dynamicTreeCut, methods,DT,Rtsne,feather,AUCell,foreach,RcisTarget,
+Imports: MASS,reshape2,infotheo, NMF, dynamicTreeCut, methods,DT,Rtsne,feather,AUCell,foreach,RcisTarget,
         SummarizedExperiment,Biobase,base,BiocParallel,data.table,HiveR,lmtest,HiveR,RANN,arcdiagram,
-          cowplot,fpc,ggplot2,inflection, lmtest, netbiov, pheatmap, plotly, plyr,rEDM, stringr, vars, viridis
+          cowplot,fpc,ggplot2,inflection, lmtest, netbiov, pheatmap, plotly, plyr,rEDM, stringr, vars, viridis,Rcpp
 Enhances: doMC
 Suggests: knitr, rmarkdown, doRNG, doParallel, testthat, SCopeLoomR
-
